force-app/main/default/objects/Group_By_Waypoint__c/Group_By_Waypoint__c.object-meta.xml
<CustomObject>
    <label>Group By Waypoint</label>
    <nameField>
        <label>Group_By_Waypoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group By Waypoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>