force-app/main/default/objects/Group_By_Waypoint__c/fields/AU_Use_Rate__c.field-meta.xml
<CustomField>
    <fullName>AU_Use_Rate__c</fullName>
    <formula>Total_Seat_Sales__c/Original_AU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AU_Use_Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>