force-app/main/default/objects/Group_By_Waypoint__c/fields/Departing_Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Departing_Flight_Date__c</fullName>
    <label>Departing_Flight_Date</label>
    <type>Date</type>
</CustomField>