force-app/main/default/objects/Group_By_Waypoint__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <formula>Total_Seat_Sales__c - Total_Seat_Sales_Y__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>