force-app/main/default/objects/Group_By_Waypoint__c/fields/Original_AU__c.field-meta.xml
<CustomField>
    <fullName>Original_AU__c</fullName>
    <label>Original AU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>