force-app/main/default/objects/Group_By_Waypoint__c/fields/Total_Final_Allocated_Seat_Used_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Allocated_Seat_Used_Rate__c</fullName>
    <formula>Total_Seat_Sales__c/Total_Final_Allocated_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Final Allocated Seat Used Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>