force-app/main/default/objects/Group_By_Waypoint__c/fields/Total_Final_Allocated_Seats_Y__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Allocated_Seats_Y__c</fullName>
    <label>Total_Final_Allocated_Seats_Y</label>
    <summarizedField>AgencyReport__c.Total_Final_Allocated_Seats_Y__c</summarizedField>
    <summaryForeignKey>AgencyReport__c.Group_By_Waypoint__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>