force-app/main/default/objects/Group_By_Waypoint__c/fields/WaypointOutside__c.field-meta.xml
<CustomField>
    <fullName>WaypointOutside__c</fullName>
    <description>外站航點</description>
    <label>WaypointOutside</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>