force-app/main/default/objects/Group_By_Waypoint__c/fields/WaypointTaiwan__c.field-meta.xml
<CustomField>
    <fullName>WaypointTaiwan__c</fullName>
    <description>台灣航點</description>
    <label>Waypoint(Taiwan)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>