force-app/main/default/objects/Group_By_Waypoint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AU_Use_Rate__c</columns>
    <columns>Intake__c</columns>
    <columns>Month__c</columns>
    <columns>Original_AU__c</columns>
    <columns>Total_Final_Allocated_Seat_Used_Rate__c</columns>
    <columns>Total_Final_Allocated_Seats__c</columns>
    <columns>Area__c</columns>
    <columns>Total_Seat_Sales__c</columns>
    <columns>WaypointTaiwan__c</columns>
    <columns>WaypointOutside__c</columns>
    <columns>Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>